--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    
+
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -184,7 +184,7 @@
             <div class="info" id="prod1">
                 <h3 class="prod1" id="prod1">vivo y02s</h3>
                 <div class="subInfo" id="prod1">
-                    <strong class="price"> <span>P</span> <p class="prod1" id="prod1">10,000</p> <span>P15,000</span> </strong>
+                    <strong class="price"> <span>P</span> <p class="prod1" id="prod1">10000</p> <span>P15,000</span> </strong>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -208,7 +208,7 @@
             <div class="info prod">
                 <h3 class="prod2" id="prod2">game console</h3>
                 <div class="subInfo">
-                    <strong class="price"><span>P</span> <p class="prod2" id="prod2">13,000</p> <span>P15,000</span> </strong>
+                    <strong class="price"><span>P</span> <p class="prod2" id="prod2">13000</p> <span>P15,000</span> </strong>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -232,7 +232,7 @@
             <div class="info">
                 <h3 class="prod3">galaxy a03s</h3>
                 <div class="subInfo">
-                    <strong class="price"> <span>P</span> <p class="prod3" id="prod3">11,000</p> <span>P15,000</span> </strong>
+                    <strong class="price"> <span>P</span> <p class="prod3" id="prod3">11000</p> <span>P15,000</span> </strong>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -244,7 +244,7 @@
             </div>
             <div class="overlay">
                 <a href="#" style="--i:1;" class="fas fa-heart"></a>
-                <a href="#" style="--i:2;" class="fas fa-shopping-cart addToCartBtn"></a>
+                <a href="#" style="--i:2;" class="fas fa-shopping-cart addToCartBtn" id="prod3"></a>
                 <a href="#" style="--i:3;" class="fas fa-search prodView" id="prod3"></a>
             </div>
         </div>
@@ -256,7 +256,7 @@
             <div class="info">
                 <h3 class="prod4">samsung</h3>
                 <div class="subInfo">
-                    <strong class="price"> <span>P</span> <p class="prod4" id="prod4">13,000</p> <span>P15,000</span> </strong>
+                    <strong class="price"> <span>P</span> <p class="prod4" id="prod4">13000</p> <span>P15,000</span> </strong>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -268,7 +268,7 @@
             </div>
             <div class="overlay">
                 <a href="#" style="--i:1;" class="fas fa-heart"></a>
-                <a href="#" style="--i:2;" class="fas fa-shopping-cart addToCartBtn"></a>
+                <a href="#" style="--i:2;" class="fas fa-shopping-cart addToCartBtn" id="prod4"></a>
                 <a href="#" style="--i:3;" class="fas fa-search prodView"></a>
             </div>
         </div>
@@ -280,7 +280,7 @@
             <div class="info">
                 <h3 class="prod5">poco</h3>
                 <div class="subInfo">
-                    <strong class="price"> <span>P</span> <p class="prod5" id="prod5">13,000</p> <span>P15,000</span> </strong>
+                    <strong class="price"> <span>P</span> <p class="prod5" id="prod5">13000</p> <span>P15,000</span> </strong>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -292,7 +292,7 @@
             </div>
             <div class="overlay">
                 <a href="#" style="--i:1;" class="fas fa-heart"></a>
-                <a href="#" style="--i:2;" class="fas fa-shopping-cart"></a>
+                <a href="#" style="--i:2;" class="fas fa-shopping-cart addToCartBtn" id="prod5"></a>
                 <a href="#" style="--i:3;" class="fas fa-search prodView" id="prod5"></a>
             </div>
         </div>
@@ -304,7 +304,7 @@
             <div class="info">
                 <h3 class="prod6">poco c40</h3>
                 <div class="subInfo">
-                    <strong class="price"> <span>P</span> <p class="prod6" id="prod6">13,000</p> <span>P15,000</span> </strong>
+                    <strong class="price"> <span>P</span> <p class="prod6" id="prod6">13000</p> <span>P15,000</span> </strong>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -316,7 +316,7 @@
             </div>
             <div class="overlay">
                 <a href="#" style="--i:1;" class="fas fa-heart"></a>
-                <a href="#" style="--i:2;" class="fas fa-shopping-cart"></a>
+                <a href="#" style="--i:2;" class="fas fa-shopping-cart addToCartBtn" id="prod6"></a>
                 <a href="#" style="--i:3;" class="fas fa-search prodView" id="prod6"></a>
             </div>
         </div>
