--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,6 @@
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <!-- custom js file link  -->
-<script type="module" src="js/script.js"></script>
+<script type="module" src="../js/script.js"></script>
 </body>
 </html>
