--- a/displayProd.html
+++ b/displayProd.html
@@ -64,6 +64,6 @@
             
         </div>
     </div>
-    <script src="../js/displayProd.js"></script>
+    <script src="./js/displayProd.js"></script>
 </body>
 </html>
