--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <header class="header">
 
-    <div class="nav1">
+    <!-- <div class="nav1">
 
         <a href="#" class="logo"> <i class="fas fa-gamepad"></i> gadget </a>
 
@@ -51,7 +51,7 @@
             <div id="loginBtn" class="fas fa-user"></div>
         </div>
 
-    </div>
+    </div> -->
 
     <div class="nav2">
         <nav class="navbar">
