--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <div class="nav2">
         <nav class="navbar">
-            <a href="#pSlider">home</a>
-            <a href="#deal">deals</a>
+            <!-- <a href="#pSlider">home</a> -->
+            <!-- <a href="#deal">deals</a> -->
             <a href="#bestSeller">best seller</a>
             <a href="#wrapper">article</a>
             <a href="#about">about</a>
